log
Wed 12 Apr 2023 12:34:10 AM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
c584b83
Wed 12 Apr 2023 12:36:17 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  1|5
total_score: 10/70
62f4597
Wed 12 Apr 2023 01:04:26 AM UTC: 
 hashmap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
fe438cf
Wed 12 Apr 2023 01:08:12 AM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  2|5
total_score: 20/70
b26c559
Fri 14 Apr 2023 01:15:15 AM UTC: 
 hashmap.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:85:47: error: expected ‘)’ before ‘{’ token
   85 |    while(strcmp(map->buckets[pos] -> key, key){
      |         ~                                     ^
      |                                               )
hashmap.c:92:1: error: expected expression before ‘}’ token
   92 | }
      | ^
hashmap.c:92:1: error: control reaches end of non-void function [-Werror=return-type]
   92 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
22927a4
